
	* lisp/sawfish/wm/commands/jump-or-exec.jl: syntax change (read the introduction in the file)
	                                            merged toggle-or-exec into it

	* lisp/sawfish/wm/edge/flip.jl
	* lisp/sawfish/wm/edge/hot-spots.jl
	* lisp/sawfish/wm/edge/infinite-desktop.jl: don't auto-enable infinit-desktop by just loading the module
	                                            export hook-functions

2010-10-24  Christopher Bratusek <zanghar@freenet.de>
	* src/flippers.c: add recreate-flippers function
			  don't auto-enable flippers when loading
			  renamed module to sawfish.wm.edge.flippers

	* lisp/sawfish/wm/ext/edge-flip.jl: open sawfish.wm.util.flippers
	                                    remove the eval-when-compile call
					    removed three unneeded exports
					    remove restart-flippers

	* lisp/sawfish/wm/ext/infinite-desktop.jl
	* lisp/sawfish/wm/edge/infinite-desktop.jl: moved file

	* lisp/sawfish/wm/ext/edge-flip.jl
	* lisp/sawfish/wm/edge/flip.jl: moved file

	* lisp/sawfish/wm/edge/util.jl: added. flippers-activate (=> user-modules
	should use THIS, not recreate-flippers (as it handles the hooks))
	                                added get-active-corner function
					added get-active-edge function
					added defcustom for hot-spots-area here
					 -- (as it's used by get-active-corner)

	* OPTIONS
	* src/fake-libexec
	* lisp/Makefile.in
	* src/Makefile.in: updated

	* lisp/sawfish/wm/edge/infinite-desktop.jl: renamed infinite-desktop.move-distance to
	infinite-desktop-move-distance and renamed infinite-desktop.move-cursor-distance to
	infinite-desktop-move-cursor-distance (note `.' VS `-')
	                                            improved infinite-desktop-enable
						    ported get-active-edge function
						    no longer depends on edge.flip

	* README.IMPORTANT: updated

	* configure.in: display a red warning

	* lisp/sawfish/wm/edge/flip.jl: move add-hook calls to edge-flip-enable
